# activity-recognition-project

./: README.md
SVM_training_and_testing_package/: CMakeLists.txt  CMakeLists.txt~  mainpage.dox  manifest.xml  manifest.xml~
SVM_training_and_testing_package/src/: classification_with_svm_June11.cpp  training_with_svm_June11.cpp
SVM_training_and_testing_package/trainingTestingData/2Joints_Track /: 2JointsDrink_June19.csv  2JointsFour_June19.csv  2JointsGround_June19.csv  2JointsLegbye_June19.csv  2JointsSit_June19.csv  2JointsWatch_June19.csv  2JointsWave_June19.csv
SVM_training_and_testing_package/trainingTestingData/2Joints_Track /testingData/: 2JointsTesting_June19.csv  2JointsTesting_June19.csv~
SVM_training_and_testing_package/trainingTestingData/2Joints_Track /trainingData/: 2JointsDead_June19.csv~  2JointsTraining_June19.csv  2JointsTraining_June19.csv~
SVM_training_and_testing_package/trainingTestingData/3Joints_Track/: dead_June16.csv  drink_June16.csv  four_June16.csv  watch_June16.csv
SVM_training_and_testing_package/trainingTestingData/3Joints_Track/testData_June17/: dead_June16.csv~  ground_June16.csv~  testData_June17.csv  testData_June17.csv~
SVM_training_and_testing_package/trainingTestingData/3Joints_Track/trainingData_June17/: dead_June16.csv~  legbye_June16.csv~  sit_June16.csv~  trainingData_June17.csv  wave_June16.csv~
feature_extraction_package/: CMakeLists.txt  mainpage.dox
feature_extraction_package/src/: Check_Watch.cpp  Dead_ball.cpp  Drinking_water.cpp  Four_signal.cpp  Leg_bye.cpp  Pick_ground.cpp  Sit_Stand.cpp  Waving_hello.cpp
openni_tracker1/: CMakeLists.txt  CMakeLists.txt~
openni_tracker1/src/: oni_in_opencv.cpp~  openni_tracker.cpp~  openni_tracker1.cpp  openni_tracker1.cpp~
